fix(style.css): now overflow-x on body

--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+body,
+html {
   background: white;
+  overflow-x: hidden;
 }
 
 #app {
